# infman

./: .gitignore  CMakeLists.txt  README.md  testando  xmake.lua
.cache/clangd/index/: file_handler.c.97C58F451B1EE3DA.idx  file_handler.h.5E47C7C8559CDC36.idx  main.c.9FD92106C56ADF6D.idx  textures_and_camera.c.CA3EAA0D8828D2D5.idx  textures_and_camera.h.E86E17DCAC79F124.idx
config/: terrain.txt
include/: enemies.h  file_handler.h  game.h  game_ctx.h  map.h  player.h  projectiles.h  textures_and_camera.h  top_scores.h  utils.h
infman/: main.c
infman.xcodeproj/: project.pbxproj
infman.xcodeproj/project.xcworkspace/xcuserdata/melch.xcuserdatad/Bookmarks/: bookmarks.plist
infman.xcodeproj/xcshareddata/xcschemes/: infman.xcscheme
infman.xcodeproj/xcuserdata/melch.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
infman.xcodeproj/xcuserdata/melch.xcuserdatad/xcschemes/: xcschememanagement.plist
resources/map/: terrain.txt
src/: enemies.c  file_handler.c  game.c  main.c  map.c  player.c  projectiles.c  textures_and_camera.c  top_scores.c  utils.c
